@@ -732,7 +732,7 @@ class CharacterSet(_Constants):
             version (tuple): MySQL version tuple.
         """
         cls.mysql_version = version[:2]
-        if cls.mysql_version == (8, 0):
+        if cls.mysql_version >= (8, 0):
             cls.desc = MYSQL_CHARACTER_SETS
 
     @classmethod
@@ -815,7 +815,7 @@ class CharacterSet(_Constants):
             except IndexError as err:
                 raise ProgrammingError(f"Character set ID {charset} unknown") from err
 
-        if charset in ("utf8", "utf-8") and cls.mysql_version == (8, 0):
+        if charset in ("utf8", "utf-8") and cls.mysql_version >= (8, 0):
             charset = "utf8mb4"
         if charset is not None and collation is None:
             info = cls.get_default_collation(charset)
