@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
 
-# Copyright (c) 2014, 2022, Oracle and/or its affiliates.
+# Copyright (c) 2014, 2023, Oracle and/or its affiliates.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License, version 2.0, as
@@ -339,7 +339,7 @@ class CExtMySQLTests(tests.MySQLConnectorTests):
 
         self.assertTrue(3 < version[0] < 9)
         self.assertTrue(0 <= version[1] < 20)
-        self.assertTrue(0 < version[2] < 99)
+        self.assertTrue(0 <= version[2] < 99)
 
     def test_thread_id(self):
         cmy = MySQL()
